# BLT-Sammich

./: .gitignore  .secrets.sample  README.md  app.py  manifest.yaml  package-lock.json  project.py  pyproject.toml  wrangler.toml
.github/workflows/: ci-cd.yaml
cloudflare/: worker.py  wrangler.toml
data/: message-T04T40NHX-team_join.md
migrations/: 0001_initial.sql
public/: index.html
script/: set-vars.sh
site/: index.html
src/: index.html  local_settings.py  settings.py  worker.py
src/sammich/plugins/: contributer.py  contributors.py  create_issue.py  project.py  reminder.py  repo.py
tests/: test_worker_helpers.py
tests/plugins/: test_contributors.py  test_project.py  test_repo.py
