[tool.poetry]
name = "blt-sammich"
version = "0.1.0"
description = ""
authors = ["Sarthak5598 <sarthak5598sharma@gmail.com>"]
readme = "README.md"

packages = [{ include = "sammich", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
slack-machine = "^0.37.0"
python-dotenv = "^1.0.1"
gitpython = "^3.1.43"
slack-sdk = "^3.27.2"
slackeventsapi = "^3.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
